yaml/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nyc
---
apiVersion: v1
kind: Namespace
metadata:
  name: sfc
