yaml/echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  labels:
    run: jgrp
spec:
  replicas: 1
  selector:
    matchLabels:
      run: jgrp
  template:
    metadata:
      labels:
        run: jgrp
    spec:
      containers:
      - image: belaban/jgroups
        name: echo
        command: ["echo-server.sh"]
        args: ["-port 12000"]
