yaml/jgrp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jgrp
  labels:
    run: jgrp
spec:
  replicas: 1
  selector:
    matchLabels:
      run: jgrp
  template:
    metadata:
      labels:
        run: jgrp
    spec:
      containers:
      - image: belaban/jgroups
        name: jgrp
        command: ["chat.sh"]
        args: ["-props gossip.xml -o"]
        ports:
          - containerPort: 7800
