yaml/jgrp2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jgrp2
  labels:
    run: jgrp2
spec:
  replicas: 2
  selector:
    matchLabels:
      run: jgrp2
  template:
    metadata:
      labels:
        run: jgrp2
    spec:
      containers:
      - image: belaban/jgroups
        name: jgrp2
        command: ["chat.sh"]
        args: ["-props tcp.xml -o"]
