yaml/dns2.yaml
##
## Can be used to deploy 3 pods running with dns-ping.xml and a service to Kubernetes
##
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jgrp2
  labels:
    run: jgrp2
spec:
  replicas: 3
  selector:
    matchLabels:
      run: jgrp2
  template:
    metadata:
      labels:
        run: jgrp2
    spec:
      containers:
      - image: belaban/jgroups
        name: jgrp2
        command: ["chat.sh"]
        args: ["-props dns-ping.xml -o"]
---
apiVersion: v1
kind: Service
metadata:
#  annotations:
#    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: jgrp2
  labels:
    run: jgrp2
spec:
  publishNotReadyAddresses: true
  clusterIP: None
  ports:
    - name: ping
      port: 7800
      protocol: TCP
      targetPort: 7800
    - name: probe
      port: 7500
      protocol: UDP
      targetPort: 7500
    - name: debug
      port: 8787
      protocol: TCP
      targetPort: 8787
    - name: stomp
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
     run: jgrp2
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
