yaml/lb.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
#    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
  name: lb
spec:
  type: LoadBalancer
  ports:
    - port: 7800
      name: jgroups
      protocol: TCP
    - port: 12000
      name: echo-server
      protocol: TCP
  selector:
    run: jgrp
#  externalTrafficPolicy: Local
