yaml/lb2.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
  name: lb2
spec:
  type: LoadBalancer
  ports:
    - port: 7800
      protocol: TCP
  selector:
    run: jgrp2
