yaml/nyc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nyc
  labels:
    site: nyc
spec:
  replicas: 1
  selector:
    matchLabels:
      site: nyc
  template:
    metadata:
      labels:
        site: nyc
    spec:
      containers:
      - image: belaban/jgroups
        name: nyc
        command: ["relay.sh"]
        args: ["-props nyc.xml -o"]
        ports:
          - containerPort: 7800
---
apiVersion: v1
kind: Service
metadata:
  name: nyc
  labels:
    site: nyc
spec:
  clusterIP: None
  ports:
    - name: jgroups
      port: 7800
      protocol: TCP
      targetPort: 7800
    - name: debug
      port: 8787
      protocol: TCP
      targetPort: 8787
  selector:
     site: nyc
  sessionAffinity: None
#  type: ClusterIP
  type: ClusterIP
status:
  loadBalancer: {}
