yaml/sfc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sfc
  labels:
    site: sfc
spec:
  replicas: 1
  selector:
    matchLabels:
      site: sfc
  template:
    metadata:
      labels:
        site: sfc
    spec:
      containers:
      - image: belaban/jgroups
        name: sfc
        command: ["chat.sh"]
        args: ["-props sfc.xml -o"]
        ports:
          - containerPort: 7800
---
apiVersion: v1
kind: Service
metadata:
  name: sfc
  labels:
    site: sfc
spec:
  clusterIP: None
  ports:
    - name: jgroups
      port: 7800
      protocol: TCP
      targetPort: 7800
    - name: debug
      port: 8787
      protocol: TCP
      targetPort: 8787
  selector:
     site: sfc
  sessionAffinity: None
#  type: ClusterIP
  type: ClusterIP
status:
  loadBalancer: {}
